{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 564,
  "lineage": "c25a1427-2087-8e1c-32bd-1f433478590b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_security_group",
      "name": "app-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:security-group/sg-0ba321ac42b9016bf",
            "description": "Allow HTTP and HTTPS for World",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-app-alb"
                ]
              }
            ],
            "id": "sg-0ba321ac42b9016bf",
            "name": "terraform-20240509003442064500000007",
            "tags": {
              "Name": "Three-Tier-app-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_security_group",
      "name": "web-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:security-group/sg-02f18200f1fa9e00f",
            "description": "Allow HTTP and HTTPS for World",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-web-alb"
                ]
              }
            ],
            "id": "sg-02f18200f1fa9e00f",
            "name": "terraform-20240509003442065000000008",
            "tags": {
              "Name": "Three-Tier-web-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-036210442de652f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-Public-Subnet1"
                ]
              }
            ],
            "id": "subnet-036210442de652f0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Three-Tier-Public-Subnet1"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-04d2570878bc047ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-Public-Subnet2"
                ]
              }
            ],
            "id": "subnet-04d2570878bc047ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Three-Tier-Public-Subnet2"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "web-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-0f216951b7c84d19a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-Web-Subnet1"
                ]
              }
            ],
            "id": "subnet-0f216951b7c84d19a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Three-Tier-Web-Subnet1"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "web-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-039796aa48333ce5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-Web-Subnet2"
                ]
              }
            ],
            "id": "subnet-039796aa48333ce5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Three-Tier-Web-Subnet2"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:vpc/vpc-0c0c4678923dba26c",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02429f9c1c9b6d9c0",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-092d7ff4828af0e89",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-VPC"
                ]
              }
            ],
            "id": "vpc-0c0c4678923dba26c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-039bd0e5461c4abea",
            "owner_id": "533266984569",
            "tags": {
              "Name": "Three-Tier-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:loadbalancer/app/APP-elb/a990247a0ecd36ae",
            "arn_suffix": "app/APP-elb/a990247a0ecd36ae",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "APP-elb-1265970933.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:loadbalancer/app/APP-elb/a990247a0ecd36ae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "APP-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ba321ac42b9016bf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-039796aa48333ce5a"
              },
              {
                "subnet_id": "subnet-0f216951b7c84d19a"
              }
            ],
            "subnets": [
              "subnet-039796aa48333ce5a",
              "subnet-0f216951b7c84d19a"
            ],
            "tags": {
              "Name": "APP-elb"
            },
            "tags_all": {
              "Name": "APP-elb"
            },
            "vpc_id": "vpc-0c0c4678923dba26c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.alb.aws_lb.web-elb",
            "module.alb.data.aws_security_group.app-alb-sg",
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.alb.data.aws_subnet.web-subnet1",
            "module.alb.data.aws_subnet.web-subnet2",
            "module.security-group.aws_security_group.app-alb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_subnet.app-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:loadbalancer/app/Web-elb/62cf152027ef9216",
            "arn_suffix": "app/Web-elb/62cf152027ef9216",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Web-elb-931378601.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:loadbalancer/app/Web-elb/62cf152027ef9216",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Web-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02f18200f1fa9e00f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036210442de652f0c"
              },
              {
                "subnet_id": "subnet-04d2570878bc047ca"
              }
            ],
            "subnets": [
              "subnet-036210442de652f0c",
              "subnet-04d2570878bc047ca"
            ],
            "tags": {
              "Name": "Web-elb"
            },
            "tags_all": {
              "Name": "Web-elb"
            },
            "vpc_id": "vpc-0c0c4678923dba26c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.security-group.aws_security_group.app-alb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_subnet.app-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:listener/app/APP-elb/a990247a0ecd36ae/c4bb999c91b8eda4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:targetgroup/APP-TG/6ffcc61f04b81956",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:listener/app/APP-elb/a990247a0ecd36ae/c4bb999c91b8eda4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:loadbalancer/app/APP-elb/a990247a0ecd36ae",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app-elb",
            "module.alb.aws_lb.web-elb",
            "module.alb.aws_lb_target_group.app-tg",
            "module.alb.data.aws_security_group.app-alb-sg",
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.alb.data.aws_subnet.web-subnet1",
            "module.alb.data.aws_subnet.web-subnet2",
            "module.alb.data.aws_vpc.vpc",
            "module.security-group.aws_security_group.app-alb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_subnet.app-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:listener/app/Web-elb/62cf152027ef9216/807ced16ba36b93f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:targetgroup/Web-TG/4f2995863f400f58",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:listener/app/Web-elb/62cf152027ef9216/807ced16ba36b93f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:loadbalancer/app/Web-elb/62cf152027ef9216",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.web-elb",
            "module.alb.aws_lb_target_group.web-tg",
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.alb.data.aws_vpc.vpc",
            "module.security-group.aws_security_group.app-alb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_subnet.app-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:targetgroup/APP-TG/6ffcc61f04b81956",
            "arn_suffix": "targetgroup/APP-TG/6ffcc61f04b81956",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:targetgroup/APP-TG/6ffcc61f04b81956",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "APP-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "APP-TG"
            },
            "tags_all": {
              "Name": "APP-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "dependencies": [
            "module.alb.aws_lb.app-elb",
            "module.alb.aws_lb.web-elb",
            "module.alb.data.aws_security_group.app-alb-sg",
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.alb.data.aws_subnet.web-subnet1",
            "module.alb.data.aws_subnet.web-subnet2",
            "module.alb.data.aws_vpc.vpc",
            "module.security-group.aws_security_group.app-alb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_subnet.app-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:targetgroup/Web-TG/4f2995863f400f58",
            "arn_suffix": "targetgroup/Web-TG/4f2995863f400f58",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:targetgroup/Web-TG/4f2995863f400f58",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Web-TG"
            },
            "tags_all": {
              "Name": "Web-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "dependencies": [
            "module.alb.aws_lb.web-elb",
            "module.alb.data.aws_security_group.web-alb-sg",
            "module.alb.data.aws_subnet.public-subnet1",
            "module.alb.data.aws_subnet.public-subnet2",
            "module.alb.data.aws_vpc.vpc",
            "module.security-group.aws_security_group.app-alb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_subnet.app-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "app-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:targetgroup/APP-TG/6ffcc61f04b81956",
            "arn_suffix": "targetgroup/APP-TG/6ffcc61f04b81956",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:targetgroup/APP-TG/6ffcc61f04b81956",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:loadbalancer/app/APP-elb/a990247a0ecd36ae"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "APP-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "APP-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c0c4678923dba26c"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:targetgroup/Web-TG/4f2995863f400f58",
            "arn_suffix": "targetgroup/Web-TG/4f2995863f400f58",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:targetgroup/Web-TG/4f2995863f400f58",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:533266984569:loadbalancer/app/Web-elb/62cf152027ef9216"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Web-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c0c4678923dba26c"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:security-group/sg-0a48c7fca1187f30f",
            "description": "Allow HTTP and HTTPS for ALB Only",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-app-sg"
                ]
              }
            ],
            "id": "sg-0a48c7fca1187f30f",
            "name": "terraform-2024050900344502240000000a",
            "tags": {
              "Name": "Three-Tier-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:security-group/sg-0c48c13e9ce899a75",
            "description": "Allow HTTP and HTTPS for ALB Only",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-web-sg"
                ]
              }
            ],
            "id": "sg-0c48c13e9ce899a75",
            "name": "terraform-20240509003445021900000009",
            "tags": {
              "Name": "Three-Tier-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_subnet",
      "name": "app-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-0bed63a46ca672358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.5.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-APP-Subnet1"
                ]
              }
            ],
            "id": "subnet-0bed63a46ca672358",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Three-Tier-APP-Subnet1"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_subnet",
      "name": "app-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-0d1050458a822996f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.6.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-APP-Subnet2"
                ]
              }
            ],
            "id": "subnet-0d1050458a822996f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Three-Tier-APP-Subnet2"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_subnet",
      "name": "web-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-0f216951b7c84d19a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-Web-Subnet1"
                ]
              }
            ],
            "id": "subnet-0f216951b7c84d19a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Three-Tier-Web-Subnet1"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_subnet",
      "name": "web-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-039796aa48333ce5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-Web-Subnet2"
                ]
              }
            ],
            "id": "subnet-039796aa48333ce5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Three-Tier-Web-Subnet2"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          }
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:vpc/vpc-0c0c4678923dba26c",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02429f9c1c9b6d9c0",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-092d7ff4828af0e89",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Three-Tier-VPC"
                ]
              }
            ],
            "id": "vpc-0c0c4678923dba26c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-039bd0e5461c4abea",
            "owner_id": "533266984569",
            "tags": {
              "Name": "Three-Tier-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:security-group/sg-0ba321ac42b9016bf",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba321ac42b9016bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240509003442064500000007",
            "name_prefix": "terraform-",
            "owner_id": "533266984569",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Three-Tier-app-alb"
            },
            "tags_all": {
              "Name": "Three-Tier-app-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_subnet.app-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:security-group/sg-0a48c7fca1187f30f",
            "description": "Allow HTTP and HTTPS for ALB Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a48c7fca1187f30f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba321ac42b9016bf"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba321ac42b9016bf"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2024050900344502240000000a",
            "name_prefix": "terraform-",
            "owner_id": "533266984569",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Three-Tier-app-sg"
            },
            "tags_all": {
              "Name": "Three-Tier-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-alb-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_subnet.app-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:security-group/sg-02f18200f1fa9e00f",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f18200f1fa9e00f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240509003442065000000008",
            "name_prefix": "terraform-",
            "owner_id": "533266984569",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Three-Tier-web-alb"
            },
            "tags_all": {
              "Name": "Three-Tier-web-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_subnet.app-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:security-group/sg-0c48c13e9ce899a75",
            "description": "Allow HTTP and HTTPS for ALB Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c48c13e9ce899a75",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f18200f1fa9e00f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f18200f1fa9e00f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240509003445021900000009",
            "name_prefix": "terraform-",
            "owner_id": "533266984569",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Three-Tier-web-sg"
            },
            "tags_all": {
              "Name": "Three-Tier-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-alb-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_subnet.app-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0351eff67b173948b",
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:elastic-ip/eipalloc-0351eff67b173948b",
            "domain": "vpc",
            "id": "eipalloc-0351eff67b173948b",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-150-202-99.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.150.202.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Three-Tier-Elastic-IP1"
            },
            "tags_all": {
              "Name": "Three-Tier-Elastic-IP1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ab4bd2a05c712cf",
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:elastic-ip/eipalloc-00ab4bd2a05c712cf",
            "domain": "vpc",
            "id": "eipalloc-00ab4bd2a05c712cf",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-52-199-107-119.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.199.107.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Three-Tier-Elastic-IP2"
            },
            "tags_all": {
              "Name": "Three-Tier-Elastic-IP2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:internet-gateway/igw-0df7887ef4df2e021",
            "id": "igw-0df7887ef4df2e021",
            "owner_id": "533266984569",
            "tags": {
              "Name": "Three-Tier-Interet-Gateway"
            },
            "tags_all": {
              "Name": "Three-Tier-Interet-Gateway"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0351eff67b173948b",
            "association_id": "eipassoc-0fcd2ba77a84f43d2",
            "connectivity_type": "public",
            "id": "nat-08c35b2525ba736e2",
            "network_interface_id": "eni-0faae4e3d7fc97b2d",
            "private_ip": "10.0.1.132",
            "public_ip": "54.150.202.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036210442de652f0c",
            "tags": {
              "Name": "Three-Tier-NAT1"
            },
            "tags_all": {
              "Name": "Three-Tier-NAT1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ab4bd2a05c712cf",
            "association_id": "eipassoc-093ee025c4e798239",
            "connectivity_type": "public",
            "id": "nat-0af68800a912096de",
            "network_interface_id": "eni-0a6a0d49dc33d524c",
            "private_ip": "10.0.2.128",
            "public_ip": "52.199.107.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d2570878bc047ca",
            "tags": {
              "Name": "Three-Tier-NAT2"
            },
            "tags_all": {
              "Name": "Three-Tier-NAT2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:route-table/rtb-017ad014f7768c998",
            "id": "rtb-017ad014f7768c998",
            "owner_id": "533266984569",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08c35b2525ba736e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Three-Tier-Private-Route-table1"
            },
            "tags_all": {
              "Name": "Three-Tier-Private-Route-table1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:route-table/rtb-043b311290a6142f7",
            "id": "rtb-043b311290a6142f7",
            "owner_id": "533266984569",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08c35b2525ba736e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Three-Tier-Private-Route-table2"
            },
            "tags_all": {
              "Name": "Three-Tier-Private-Route-table2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:route-table/rtb-088df38aa5684dfc0",
            "id": "rtb-088df38aa5684dfc0",
            "owner_id": "533266984569",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df7887ef4df2e021",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Three-Tier-Public-Route-table1"
            },
            "tags_all": {
              "Name": "Three-Tier-Public-Route-table1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:route-table/rtb-08dbb91efddc103e2",
            "id": "rtb-08dbb91efddc103e2",
            "owner_id": "533266984569",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df7887ef4df2e021",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Three-Tier-Public-Route-table2"
            },
            "tags_all": {
              "Name": "Three-Tier-Public-Route-table2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057376d26472201fc",
            "route_table_id": "rtb-017ad014f7768c998",
            "subnet_id": "subnet-0f216951b7c84d19a"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0321ae2351dacc2d9",
            "route_table_id": "rtb-043b311290a6142f7",
            "subnet_id": "subnet-039796aa48333ce5a"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0316e40da26f7865a",
            "route_table_id": "rtb-088df38aa5684dfc0",
            "subnet_id": "subnet-036210442de652f0c"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0618bf922e9c5d71a",
            "route_table_id": "rtb-08dbb91efddc103e2",
            "subnet_id": "subnet-04d2570878bc047ca"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt1",
            "module.vpc.aws_route_table.public-rt2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_subnet.web-subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-0bed63a46ca672358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bed63a46ca672358",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Three-Tier-APP-Subnet1"
            },
            "tags_all": {
              "Name": "Three-Tier-APP-Subnet1"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-0d1050458a822996f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1050458a822996f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Three-Tier-APP-Subnet2"
            },
            "tags_all": {
              "Name": "Three-Tier-APP-Subnet2"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.app-subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-036210442de652f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036210442de652f0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Three-Tier-Public-Subnet1"
            },
            "tags_all": {
              "Name": "Three-Tier-Public-Subnet1"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-04d2570878bc047ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d2570878bc047ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Three-Tier-Public-Subnet2"
            },
            "tags_all": {
              "Name": "Three-Tier-Public-Subnet2"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-0f216951b7c84d19a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f216951b7c84d19a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Three-Tier-Web-Subnet1"
            },
            "tags_all": {
              "Name": "Three-Tier-Web-Subnet1"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:subnet/subnet-039796aa48333ce5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039796aa48333ce5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266984569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Three-Tier-Web-Subnet2"
            },
            "tags_all": {
              "Name": "Three-Tier-Web-Subnet2"
            },
            "vpc_id": "vpc-0c0c4678923dba26c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.web-subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:533266984569:vpc/vpc-0c0c4678923dba26c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0afbf5805a4093fc1",
            "default_route_table_id": "rtb-039bd0e5461c4abea",
            "default_security_group_id": "sg-0f310fcb4e4219ebf",
            "dhcp_options_id": "dopt-092d7ff4828af0e89",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0c4678923dba26c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039bd0e5461c4abea",
            "owner_id": "533266984569",
            "tags": {
              "Name": "Three-Tier-VPC"
            },
            "tags_all": {
              "Name": "Three-Tier-VPC"
            }
          }
        }
      ]
    }
  ]
}